--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,47 +1,47 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "Node.js & TypeScript",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
-	// Configure tool-specific properties.
-	"postCreateCommand": "npm instal",
-	"customizations": {
-		"vscode": {
-			"extensions": [
-				"GitHub.copilot",
-				"dbaeumer.vscode-eslint",
-				"esbenp.prettier-vscode",
-				"ms-vscode.vscode-typescript-tslint-plugin",
-				"ms-vscode.vscode-typescript-next",
-				"prisma.prisma",
-				"redhat.vscode-yaml",
-				"zhuangtongfa.material-theme",
-				"dsznajder.es7-react-js-snippets",
-				"VisualStudioExptTeam.vscodeintellicode",
-				"yzhang.markdown-all-in-one",
-				"kamikillerto.vscode-colorize",
-				"vscode.json-language-features",
-				"GraphQL.vscode-graphql",
-				"vscode.git",
-				"bradlc.vscode-tailwindcss",
-				"formulahendry.auto-rename-tag",
-				"PKief.material-icon-theme",
-				"oderwat.indent-rainbow",
-				"formulahendry.auto-close-tag",
-				"markdown.showPreview",
-				"eamodio.gitlens",
-				"GitHub.vscode-pull-request-github",
-				"ms-azuretools.vscode-docker"
-			]
-		}
-	},
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  "name": "Node.js & TypeScript",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye",
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  "forwardPorts": [5173],
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "yarn install",
+  // Configure tool-specific properties.
+  "postCreateCommand": "npm instal",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "GitHub.copilot",
+        "dbaeumer.vscode-eslint",
+        "esbenp.prettier-vscode",
+        "ms-vscode.vscode-typescript-tslint-plugin",
+        "ms-vscode.vscode-typescript-next",
+        "prisma.prisma",
+        "redhat.vscode-yaml",
+        "zhuangtongfa.material-theme",
+        "dsznajder.es7-react-js-snippets",
+        "VisualStudioExptTeam.vscodeintellicode",
+        "yzhang.markdown-all-in-one",
+        "kamikillerto.vscode-colorize",
+        "vscode.json-language-features",
+        "GraphQL.vscode-graphql",
+        "vscode.git",
+        "bradlc.vscode-tailwindcss",
+        "formulahendry.auto-rename-tag",
+        "PKief.material-icon-theme",
+        "oderwat.indent-rainbow",
+        "formulahendry.auto-close-tag",
+        "markdown.showPreview",
+        "eamodio.gitlens",
+        "GitHub.vscode-pull-request-github",
+        "ms-azuretools.vscode-docker"
+      ]
+    }
+  }
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
