--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "prettier": "^3.0.1",
+    "tsc": "^2.0.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
