--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@generouted/react-router": "^1.15.4",
     "@supabase/supabase-js": "^2.32.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
