--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
