統合が完了しためIntegrationをmasterにマージ (#20)
* feat: サインアウトの機能を実行できるように

* refactor: いらないファイルの消去

* feat: settingとhomeをSignInいるときのみ閲覧できるように

* feat: 嘘指摘機能の作成

* fix: ボタンを修正

* fix: プルリク上で観測されたエラーを修正

* fix: サインアウトボタンで固まるバグを修正

* fix: `PostCard.tsx`のwarnを修正

* fix: usernameの登録を行えるように修正

* feat: 設定のページをsettingsに変更

* feat: 投稿を行えるように

* feat: 投稿を行えるように

* feat: errorを出力する用に変更

* refactor: リファクタリング

* fix: 投稿後にPostの中身が残っているバグを修正

* refactor: 要らない処理を消去

* feat: app_user_idも登録するように変更

* feat: 修正useStateからrefに切り替え、再レンダリングなどを防止

* feat: 返信機能のUIを作成

* fix: settingsページに遷移できない不具合を修正

* fix: postや画面遷移した後にリクエストがすごいことになる不具合を修正

* perf: 複数回のクエリを送ってしまう処理を改善

* fix: ボタンの色を修正

* feat: 投稿更新ボタンの作成

* feat: 更新表示ボタンの作成

* feat: 投稿時にトーストが表示される・setting機能の仮作成・PostCardにkeyを付与

* fix: 設定したアイコンが投稿に反映されるよう修正

* feat: 嘘判定機能との連携

* feat: コメント機能の作成

* fix: headerの項目を修正

* fix: sessionの動作が重い処理を修正

・Recoilを導入

* feat: 投稿とコメントの更新が投稿を行った際に行われるように

* refactor: supabase.tsのリファクタリング

* fix: ユーザー名が登録されないバグを修正

* docs: 型定義ファイル更新

* feat: 投稿の更新ボタンの作成

* fix: コメントのユーザーが投稿したユーザーにならないバグを修正

* fix: タイプミスを修正

---------

Co-authored-by: ibukani <127748974+ibukani@users.noreply.github.com>
Co-authored-by: neruneruna7 <113534341+neruneruna7@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@emotion/styled": "^11.11.0",
     "@generouted/react-router": "^1.15.4",
     "@supabase/supabase-js": "^2.32.0",
+    "axios": "^1.4.0",
     "framer-motion": "^10.15.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
